<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">连酷</string>

    <!-- 登录 注册 -->
    <string name="login">登录</string>
    <string name="account">账户</string>
    <string name="login_account_hint">邮箱登陆</string>
    <string name="login_password_hint">请输入连酷密码</string>
    <string name="password">密码</string>
    <string name="foget_password">忘记密码</string>
    <string name="security_code">Code</string>
    <string name="security_code_hint">Code Hint</string>
    <string name="remeber_me">记住我</string>
    <string name="register">注册</string>
    <string name="register_account">注册邮箱</string>
    <string name="register_account_hint">注册邮箱，注册后不可更改</string>
    <string name="register_password_hint">请输入密码，6至14位，字母区分大小写</string>
    <string name="register_confirm_password_hint">请再次输入密码</string>
    <string name="register_protocol_text">点击下面的“注册”按钮，即表示您同意</string>
    <string name="init_user_info_nickname_hint">仅支持中英文及下划线</string>
    <string name="init_user_info_birthday_hint">XXXX-XX-XX</string>
    <string name="init_user_info_personstate_hint">个性签名~</string>

    <!-- 主页面 -->
    <string name="avatar_hint">请登录</string>
    <string name="single_mode">单人模式</string>
    <string name="multi_mode">多人模式</string>

    <!-- 单人模式 -->
    <string name="shake_mode">摇摇模式</string>
    <string name="voice_mode">音乐模式</string>
    <string name="mic_mode">语音模式</string>
    <string name="sex_position_mode">经典七式</string>

    <!-- 多人模式 -->
    <string name="add_friend">添加</string>
    <string name="friends">好友</string>
    <string name="search_user_by_email">邮箱账号</string>
    <string name="new_messages">消息</string>
    <string name="friend_list">好友</string>

    <!-- 个人好友信息 -->
    <string name="detail_info">详细资料</string>

    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="connect_toy">连接玩具</string>
    <string name="personal_info">个人信息</string>
    <string name="relevant_app">相关软件</string>
    <string name="delete_after_read">阅后即焚</string>
    <string name="purchase_toy">购买玩具</string>
    <string name="help">使用说明</string>
    <string name="feedback">您的建议</string>
    <string name="login_or_register">登录/注册</string>
    <string name="logout">退出登录</string>
    <string name="feedback_email_hint">联系Email</string>
    <string name="about_us">关于我们</string>
    <string name="set_language">语言设置</string>
    <string name="check_update">检测更新</string>
    <string name="about_slogan">连酷•连爱</string>
    <string name="about_company_name">Linkcube  连酷科技</string>
    <string name="version_name">版本号：2.1.0806</string>
    <string name="linkcube_weixin">微信：连酷科技</string>
    <string name="linkcube_weibo">微博：@连酷科技</string>
    <string name="linkcube_website">http://www.linkcube.me</string>
	<string name="app_download">下载</string>
    <!-- 蓝牙设置 -->
    <string name="search_toy">搜索玩具</string>
    <string name="searching">正在搜索...</string>
    <string name="enter_mall">点击进入连酷玩具商城</string>
    <string name="bluetooth">蓝牙</string>
    <string name="bluetooth_help">蓝牙帮助</string>
    <string name="devices_available">可连接玩具</string>
    <string name="click_and_connect">点击列表即可连接</string>
    <string name="switch_on_bluetooth_to_search_toy">要搜索连酷玩具，请打开蓝牙功能</string>
    <string name="switching_on_bluetooth">正在打开蓝牙</string>
    <string name="switching_off_bluetooth">正在关闭蓝牙</string>
    <string name="connected">已连接</string>
    <string name="bonded">已配对未连接</string>
    <string name="bonding">正在配对</string>
    <string name="unbond">未配对</string>

    <!-- 修改密码 -->
    <string name="old_pwd_hint">请输入原有密码</string>
    <string name="new_pwd_hint">输入新密码</string>
    <string name="confirm_new_pwd__hint">再次输入新密码</string>

    <!-- 意见反馈 -->
    <string name="character_exceed">你输入的字数已经超过了限制！</string>
    <string name="thanks_feed_back">感谢您的反馈意见！</string>
    <string name="limit_word">字</string>
    <string name="feedback_email">邮箱</string>

    <!-- actionbar -->
    <string name="back">返回</string>
    <string name="user_info">个人信息</string>
    <string name="update_user_info">更新个人信息</string>
    <string name="user_agreement_activity">软件协议</string>
    <string name="new_friend_request">消息</string>
    <string name="search_user">添加</string>
    <string name="save_user_info">保存</string>
    <string name="feedback_send">发送</string>
    <string name="friend_add_clear">清空</string>
    <string name="search_friend">搜索</string>
    <string name="change_pwd">修改密码</string>
    <string name="confirm">确定</string>
    
    <!-- 用户个人信息 -->
    <string name="nickname">昵       称</string>
    <string name="gender">性       别</string>
    <string name="birthday">出生年月</string>
    <string name="person_state">个性签名</string>
    <string name="register_email">注册邮箱</string>
    <string name="save_person_info">保存个人信息</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="send_message">发消息</string>
    <string name="person_state_def">一起游戏吧~</string>
    
    <!-- 多人游戏信息 -->
    <string name="click_and_send_game_msg">点击发起游戏</string>
    <string name="request_has_been_send">请求已发送，请等待...</string>
    <string name="second">秒</string>
    <string name="pls_wait_thirty_second">等待时间30秒</string>
    <string name="wait_time">等待时间</string>
    <string name="is_playing">正在与</string>
    <string name="game_with">进行游戏中</string>
    <string name="you_send_invitation_to_others">你向对方发出了游戏邀请~</string>
    <string name="you_accept_others_invitation">你接受了对方的游戏邀请~</string>
    <string name="you_refused_others_invitation">你拒绝了对方的游戏邀请~</string>
    <string name="you_stop_this_game">你结束了本次游戏~</string>
    <string name="others_accept_your_invitation">对方接收了你的游戏邀请~</string>
    <string name="others_send_invitation_to_you">对方向你发出游戏邀请~</string>
    <string name="others_refused_your_invitation">对方拒绝了你的游戏邀请~</string>
    <string name="others_stop_this_game">对方结束了本次游戏~</string>
    
    <!-- 添加好友界面 -->
    <string name="pls_wait">正在获取中。。。</string>
    <string name="accept">同意</string>
    <string name="refuse">拒绝</string>
    <string name="add_as_friend">加为好友</string>
    <string name="you_added">您添加了</string>
    <string name="be_your_friend">为好友</string>
    
    <!-- 好友请求处理界面 -->
    <string name="add_friend_request">请求添加您为好友</string>
    <string name="has_be_your_friend">已添加为好友</string>
    <string name="adding_friend">正在添加好友</string>
    
    <!-- Toast -->
    <string name="toast_connect_network_wait">正在连接网络，请稍等...</string>
    <string name="toast_auto_login_wait">自动登录中，请稍等...</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_login_and_waiting">正在登陆哦，请稍后...</string>
    <string name="toast_name_psw_not_null">用户名和密码不能为空</string>
	<string name="toast_check_network">网络错误，请检查网络</string>
	<string name="toast_has_login">已经登录</string>
	<string name="toast_name_psw_wrong">用户名或密码错误</string>
	<string name="toast_not_exist_this_user">不存在当前用户</string>
	<string name="toast_goodname_to_remember">好名字可以让你的朋友更容易记住你</string>
	<string name="toast_change_person_state">换个状态换个心情</string>
	<string name="linkcube_terms_and_conditions">连酷软件许可及服务协议</string>
	
	<string name="toast_server_noresponse">服务器无响应</string>
	<string name="toast_email_has_used">当前邮箱已被使用</string>
	<string name="toast_network_wrong_try_again">网络异常，请重试</string>
	
	<string name="toast_username_hasbeen_email">用户名必须为邮箱</string>
	<string name="toast_psw_too_short">密码长度太短</string>
	<string name="toast_psw_couldnot_contain_space">密码中不能包含空格</string>
	<string name="toast_psw_not_match">密码不一致，请重新输入</string>
	
	<!-- Toast-MainActivity -->
	<string name="toast_toy_disconnect_try_again">玩具已断开，请重新连接</string>
	<string name="toast_network_reconnect">重新连接成功</string>
	<string name="toast_network_error_download_file_failure">网络异常，文件下载失败</string>
	
	<!-- Toast-ChatActivity -->
	<string name="send">发送</string>
	<string name="toast_close_game">关闭游戏</string>
	<string name="toast_not_my_friend_add_again">该用户已经不是您的好友，请重新添加</string>
	<string name="del_after_read">阅后即焚</string>
	
	<!-- 好友列表界面-->
	<string name="toast_delete_friend">是否删除此好友</string>
	
	<!-- Toast-陌生好友信息页面 -->
	<string name="toast_friend_request_has_send">好友请求已发送</string>
	<string name="toast_add_friend_failure">添加好友失败</string>
	<string name="toast_add_friend_failure_try_again">添加失败，请重试</string>
	
	<!-- Toast-修改密码页面 -->
	<string name="toast_original_psw_wrong">原始密码错误</string>
	<string name="toast_new_psw_too_short">新密码长度太短</string>
	<string name="toast_psw_contain_space">密码中不能包含空格</string>
	<string name="toast_psw_inconsistente_reinput">密码不一致，请重新输入</string>
	<string name="toast_change_psw_success">密码修改成功</string>
	<string name="toast_change_psw_failure">密码修改失败，请重新尝试</string>
	
	<!-- Toast-蓝牙设置 -->
	<string name="dialog_bonding_bluetooth">正在绑定玩具...</string>
	<string name="toast_toy_unbonded">绑定拉玩具失败</string>
	<string name="toast_open_bluetooth_wait">正在打开蓝牙,请稍后</string>
	<string name="toast_close_bluetooth_wait">正在关闭蓝牙，请稍后</string>
	<string name="toast_pls_open_bluetooth">请打开蓝牙</string>
	<string name="toast_bluetooth_open">蓝牙已打开</string>
	<string name="toast_bluetooth_closed">蓝牙已关闭</string>
	<string name="toast_searching_toy_over">搜索蓝牙设备完毕!</string>
	<string name="toast_no_device_nearby">附近没有搜索到设备</string>
	<string name="toast_connecting_toy">正在与玩具连接...</string>
	<string name="toast_connect_toy_success">连接玩具成功!</string>
	<string name="toast_connect_toy_failure">连接玩具失败，请确认玩具是否打开!</string>
	<string name="toast_bond_toy_success">玩具配对成功!</string>
	<string name="toast_toy_disconnect_pls_set">玩具未连接，请点击右上角设置</string>
	
	<!-- Toast-更新-->
	<string name="update_title">连酷</string>
	<string name="update_download_flie">正在下载更新文件</string>
	<string name="update_find_new_version">发现新版本</string>
	<string name="update_now">马上更新</string>
	<string name="update_nexttime">下次再说</string>
	<string name="update_version_code">版本号：</string>
	<string name="update_file_size">大小：</string>
	<string name="update_description">描述：</string>
	
</resources>