<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainPage"
    android:layout_width="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/SettingPadding"
        android:paddingRight="@dimen/SettingPadding" >

        <TextView
            android:id="@id/connect_toy_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/connect_toy" />

        <View style="@style/Setting.Item.Divider" />

        <TextView
            android:id="@id/personal_info_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/personal_info" />

        <View style="@style/Setting.Item.Divider" />

        <TextView
            android:id="@id/purchase_toy_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/purchase_toy"
            android:visibility="gone" />

        <!-- <View style="@style/Setting.Item.Divider" /> -->

        <TextView
            android:id="@id/help_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/help"
            android:visibility="gone" />

        <!-- <View style="@style/Setting.Item.Divider" /> -->

        <TextView
            android:id="@id/feedback_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/feedback" />

        <View style="@style/Setting.Item.Divider" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@id/checkupdate_tv"
                style="@style/Setting.Item.TextView"
                android:text="@string/check_update" />

            <ImageView
                android:id="@+id/new_version_tip_iv"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="25dp"
                android:src="@drawable/pink_dot"
                android:visibility="invisible" />

        </RelativeLayout>

        <View style="@style/Setting.Item.Divider" />

        <TextView
            android:id="@id/set_language_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/set_language" />

        <View style="@style/Setting.Item.Divider" />
        
        <TextView
            android:id="@id/about_us_tv"
            style="@style/Setting.Item.TextView"
            android:text="@string/about_us" />

        <View style="@style/Setting.Item.Divider" />

        <Button
            android:id="@id/login_or_register_btn"
            style="@style/Button.Pink"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</LinearLayout>