<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <me.linkcube.app.widget.CWClearEditText
            android:id="@+id/user_name"
            style="@style/LineEditText"
            android:layout_width="match_parent"
            android:ems="10"
            android:hint="@string/login_account_hint"
            android:text=""
            android:cursorVisible="true" >

            <requestFocus />
        </me.linkcube.app.widget.CWClearEditText>

        <me.linkcube.app.widget.CWClearEditText
            android:id="@+id/pass_word"
            style="@style/LineEditTextPwd"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:cursorVisible="true"
            android:text="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <CheckBox
                android:id="@+id/remember_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="false"
                android:text="@string/remeber_me"
                android:textColor="#000000" />

            <!-- <TextView
                android:id="@+id/find_password_tv"
                style="@style/HyperText"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/foget_password" /> -->
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/Button.Pink"
            android:layout_width="match_parent"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_btn"
            style="@style/Button.Pink"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/register" />
    </LinearLayout>

</ScrollView>